@@ -16,7 +16,7 @@ Compile resolve_btfids tool at kernel compilation start".
 
 --- a/Makefile
 +++ b/Makefile
-@@ -1067,28 +1067,6 @@ export mod_sign_cmd
+@@ -1070,18 +1070,6 @@ export mod_sign_cmd
  
  HOST_LIBELF_LIBS = $(shell pkg-config libelf --libs 2>/dev/null || echo -lelf)
  
@@ -32,6 +32,13 @@ Compile resolve_btfids tool at kernel compilation start".
 -  endif
 -endif
 -
+ PHONY += resolve_btfids_clean
+ 
+ resolve_btfids_O = $(abspath $(objtree))/tools/bpf/resolve_btfids
+@@ -1093,16 +1081,6 @@ ifneq ($(wildcard $(resolve_btfids_O)),)
+ 	$(Q)$(MAKE) -sC $(srctree)/tools/bpf/resolve_btfids O=$(resolve_btfids_O) clean
+ endif
+ 
 -ifdef CONFIG_BPF
 -ifdef CONFIG_DEBUG_INFO_BTF
 -  ifeq ($(has_libelf),1)
@@ -45,7 +52,7 @@ Compile resolve_btfids tool at kernel compilation start".
  PHONY += prepare0
  
  export MODORDER := $(extmod-prefix)modules.order
-@@ -1212,6 +1190,28 @@ uapi-asm-generic:
+@@ -1226,6 +1204,28 @@ uapi-asm-generic:
  	$(Q)$(MAKE) $(asm-generic)=arch/$(SRCARCH)/include/generated/uapi/asm \
  	generic=include/uapi/asm-generic
  
