@@ -46,6 +46,7 @@ linux (5.10.29-1) UNRELEASED; urgency=medium
   * vfs: move cap_convert_nscap() call into vfs_setxattr() (CVE-2021-3493)
   * [x86] tools/power/turbostat: Fix turbostat for AMD Zen CPUs
     (Closes: #985681)
+  * Refresh "Makefile: Do not check for libelf when building OOT module"
 
   [ Vagrant Cascadian ]
   * [arm64] Disable USB type-C DisplayPort in pinebook pro device-tree.
